fix gradient clip on safari

--- a/_client/styles/header.scss
+++ b/_client/styles/header.scss
@@ -4,7 +4,7 @@ header {
   filter: drop-shadow(0px -10px 100px var(--peach));
   position: relative;
   width: 100vw;
-  overflow: hidden;
+  overflow: visible;
   z-index: 5;
 }
 
